# whisper_finetuning

./: .gitignore  README.md  experiment_results.md  explore_dataset.py  main.py  preview_dataset.py  pyproject.toml  requirements.txt  setup_whisper_finetune.sh  test.py  whisper_bug_report.txt  whisper_bug_report_2.txt  whisper_bug_report_3.txt  whisper_bug_report_4.txt  whisper_experiment.py
experiments/: README.md  __init__.py
experiments/base_002/: config.yaml  results.md  whisper_experiment.py
experiments/base_003/: config.yaml  results.md
experiments/base_004/: config.yaml  results.md  whisper_experiment_004.py
experiments/baseline_001/: config.yaml  results.md  whisper_experiment.py
experiments/distil-large-v3_004/: config.yaml
experiments/distil-small_004/: config.yaml  whisper_experiment_004.py
experiments/experiment_001/: README.md  config.yaml
experiments/experiment_002/: README.md  __init__.py  config.yaml  main.py
experiments/largev3_003/: README.md  config.yaml  results.md  whisper_experiment_003.py
experiments/largev3_004/: config.yaml
experiments/small_004/: config.yaml
experiments/templates/: config_template.yaml  results_template.md
experiments/tiny_004/: config.yaml
results/baseline_001_20241215_083907/: results.yaml
results/baseline_001_20241215_084146/: results.yaml
results/baseline_001_20241215_084210/: results.yaml
results/baseline_001_20241215_084414/: results.yaml
results/baseline_001_20241215_084439/: results.yaml
results/baseline_001_20241215_084550/: results.yaml
results/baseline_001_20241215_084954/: results.yaml
results/baseline_001_20241215_085248/: results.yaml
results/baseline_001_20241215_085450/: results.yaml
templates/: README.md  README.md.template  config.yaml.template
(+115 files in other folders)
