[project]
name = "whisper-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.21"
dependencies = [
    "accelerate>=0.20.0",
    "datasets>=2.12.0",
    "evaluate>=0.4.0",
    "jiwer>=3.0.0",
    "librosa>=0.10.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "soundfile>=0.12.1",
    "tensorboard>=2.13.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]
