[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.21"
dependencies = [
    "accelerate>=0.20.0",
    "datasets<2.16.0",
    "evaluate>=0.4.0",
    "jiwer>=3.0.0",
    "librosa>=0.10.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "soundfile>=0.12.1",
    "tensorboard==2.14.1",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers==4.45.2",
    "flash-attn>=2.7.2",
    "tensorflow==2.14.0",
    "tf-keras==2.15.0",
    "packaging<22.0",
]
